@@ -1,3 +1,11 @@
+2017-06-22  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2017-05-22  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/80853
+	* testsuite/libgomp.c/pr80853.c: New test.
+
 2017-05-05  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
